2003-08-25    <dgay@barnowl.research.intel-research.net>

	* configure.ac: bump version
	* src/jtagprog.cc: work around cygwin gcc (3.2.3) bug with
	  large stack allocated locals by making them static

2003-08-21    <dgay@barnowl.research.intel-research.net>

	* doc/ice-insight.1: new file, ice-insight man page
	* doc/ice-gdb.1: new file, ice-gdb man page
	* doc/Makefile.am: new file
	* Makefile.am (SUBDIRS): make doc subdir
	* configure.ac: Bump revision, add doc Makefile

2003-08-20  Theodore A. Roth  <troth@openavr.org>

	* src/jtagrun.cc (jtagContinue): Add debug output to show what the 
	jtag box returned, especially the break status register.

2003-08-19  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* src/jtagprog.cc (get_section_addr): Fix to allow programming of upper
	64k of flash.

2003-08-18  David Gay  <dgay@barnowl.research.intel-research.net>

	* src/main.cc (main): Add missing --file option for getopt
	  [Thanks to Mike Hudson <pontifex@isys.ca>]

2003-08-15  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am (dist-hook): New rule.
	* configure.ac (AC_INIT): Bump version.
	(AC_CONFIG_FILES): Add avarice.spec.
	* avarice.spec.in: New file.

2003-08-15  Theodore A. Roth  <troth@openavr.org>
[Thanks to Nils Kristian Strom <nilsst@omegav.ntnu.no>]

	* src/main.cc (long_opts): Fix short opts to match usage output.

2003-08-08  Theodore A. Roth  <troth@openavr.org>
[Thanks to James Harris  <James.Harris@codan.com.au>]

	* src/gnu_getopt.h: Define HAVE_DECL_GETOPT to fix declaration clash.

2003-08-06  David Gay  <dgay@barnowl.research.intel-research.net>

	* src/main.cc (main): actually implement --version
	* configure.ac: Bump version.

2003-08-05  David Gay  <dgay@barnowl.research.intel-research.net>

	* scripts/start-avarice: use new host:portname syntax

2003-08-05  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/Makefile.am (avarice_SOURCES): Add gnu_getopt* files.